Improve documentation on custom and lazy types
Update snippets and some misleading/wrong sections in
'custom_gradle_types' and 'lazy_configuration'

--- a/subprojects/docs/src/snippets/plugins/namedDomainObjectContainer/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/plugins/namedDomainObjectContainer/groovy/build.gradle
@@ -5,7 +5,7 @@ plugins {
 download {
     // Can use a block to configure the container contents
     resources {
-        gradle {
+        register('gradle') {
             uri = uri('https://gradle.org')
         }
     }
