--- a/subprojects/docs/src/snippets/providers/fileAndDirectoryProperty/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/providers/fileAndDirectoryProperty/groovy/build.gradle
@@ -1,12 +1,12 @@
 // A task that generates a source file and writes the result to an output directory
-class GenerateSource extends DefaultTask {
+abstract class GenerateSource extends DefaultTask {
     // The configuration file to use to generate the source file
     @InputFile
-    final RegularFileProperty configFile = project.objects.fileProperty()
+    abstract RegularFileProperty getConfigFile()
 
     // The directory to write source files to
     @OutputDirectory
-    final DirectoryProperty outputDir = project.objects.directoryProperty()
+    abstract DirectoryProperty getOutputDir()
 
     @TaskAction
     def compile() {
@@ -21,15 +21,12 @@ class GenerateSource extends DefaultTask {
 }
 
 // Create the source generation task
-task generate(type: GenerateSource) {
+tasks.register('generate', GenerateSource) {
     // Configure the locations, relative to the project and build directories
-    configFile = project.layout.projectDirectory.file('src/main/config.txt')
-    outputDir = project.layout.buildDirectory.dir('generated-source')
-
-    // Note that a `File` instance can be used as a convenience to set a location
-    configFile = file('src/config.txt')
+    configFile = layout.projectDirectory.file('src/config.txt')
+    outputDir = layout.buildDirectory.dir('generated-source')
 }
 
 // Change the build directory
 // Don't need to reconfigure the task properties. These are automatically updated as the build directory changes
-buildDir = 'output'
+layout.buildDirectory = layout.projectDirectory.dir('output')
