--- a/subprojects/docs/src/snippets/providers/listProperty/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/providers/listProperty/groovy/build.gradle
@@ -1,6 +1,6 @@
-class Producer extends DefaultTask {
+abstract class Producer extends DefaultTask {
     @OutputFile
-    final RegularFileProperty outputFile = project.objects.fileProperty()
+    abstract RegularFileProperty getOutputFile()
 
     @TaskAction
     void produce() {
@@ -11,9 +11,9 @@ class Producer extends DefaultTask {
     }
 }
 
-class Consumer extends DefaultTask {
+abstract class Consumer extends DefaultTask {
     @InputFiles
-    final ListProperty<RegularFile> inputFiles = project.objects.listProperty(RegularFile)
+    abstract ListProperty<RegularFile> getInputFiles()
 
     @TaskAction
     void consume() {
@@ -25,20 +25,20 @@ class Consumer extends DefaultTask {
     }
 }
 
-task producerOne(type: Producer)
-task producerTwo(type: Producer)
-task consumer(type: Consumer)
-
-// Connect the producer task outputs to the consumer task input
-// Don't need to add task dependencies to the consumer task. These are automatically added
-consumer.inputFiles.add(producerOne.outputFile)
-consumer.inputFiles.add(producerTwo.outputFile)
+def producerOne = tasks.register('producerOne', Producer)
+def producerTwo = tasks.register('producerTwo', Producer)
+tasks.register('consumer', Consumer) {
+    // Connect the producer task outputs to the consumer task input
+    // Don't need to add task dependencies to the consumer task. These are automatically added
+    inputFiles.add(producerOne.get().outputFile)
+    inputFiles.add(producerTwo.get().outputFile)
+}
 
 // Set values for the producer tasks lazily
 // Don't need to update the consumer.inputFiles property. This is automatically updated as producer.outputFile changes
-producerOne.outputFile = layout.buildDirectory.file('one.txt')
-producerTwo.outputFile = layout.buildDirectory.file('two.txt')
+producerOne.configure { outputFile = layout.buildDirectory.file('one.txt') }
+producerTwo.configure { outputFile = layout.buildDirectory.file('two.txt') }
 
 // Change the build directory.
 // Don't need to update the task properties. These are automatically updated as the build directory changes
-buildDir = 'output'
+layout.buildDirectory = layout.projectDirectory.dir('output')
