--- a/subprojects/docs/src/snippets/providers/propertyConvention/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/providers/propertyConvention/groovy/build.gradle
@@ -1,19 +1,21 @@
-task show {
+tasks.register('show') {
     doLast {
-        def property = objects.property(String)
+// tag::conventions[]
+def property = objects.property(String)
 
-        // Set a convention
-        property.convention("convention 1")
-        println("value = " + property.get())
+// Set a convention
+property.convention("convention 1")
+println("value = " + property.get())
 
-        // Can replace the convention
-        property.convention("convention 2")
-        println("value = " + property.get())
+// Can replace the convention
+property.convention("convention 2")
+println("value = " + property.get())
 
-        property.set("value")
+property.set("value")
 
-        // Once a value is set, the convention is ignored
-        property.convention("ignored convention")
-        println("value = " + property.get())
+// Once a value is set, the convention is ignored
+property.convention("ignored convention")
+println("value = " + property.get())
+// end::conventions[]
     }
 }
